@@ -3,14 +3,16 @@ Hash: SHA1
 
 DIST wordish-0.0.6.tar.gz 7507 RMD160 0b85d827e06e34c6a32645de16cd93a95bb1ee49 SHA1 81ae3889b8bae2b0f74212011c83dfea1ffbc240 SHA256 25965bae8cf0da1eb42de061d1b8d8e2e2403848ecfac93dfa833f86c24cb92c
 DIST wordish-1.0.0beta4.tar.gz 10111 RMD160 ade5293803da41d99bbd04c8327a334b577fa8b1 SHA1 0da51450d2a5071b7dbdd0b85d92097634969655 SHA256 bf0cd85fab1fd0a02901eac48335997408ddb4d3d34db993c47267256eafb0c1
+DIST wordish-1.0.1.tar.gz 8542 RMD160 f065861f7714130d3e2b499fc69fe2a69cff4a62 SHA1 9d7a639a5a2f7749a756d4fd2832740415a17efd SHA256 5caea3d44ae6b406b67f8467e9f46ec686fb38c962521fd92cc93a9aae9a2c69
 EBUILD wordish-0.0.6.ebuild 358 RMD160 e312f9a5691403a9e08c666dac159927b9490521 SHA1 89dd217edaf9f0e32abe2462e7522fb093a9c95b SHA256 84c4ee655f1afe99219372a29238ef616853132ae9b12abb2d58ce39a03ef3ed
 EBUILD wordish-1.0.0_beta4.ebuild 614 RMD160 1158cdc2259e5562277df5b2bdeb80170cfe742f SHA1 9aba01031307e52e29039bb43aa50ecec172e271 SHA256 3816ef6c9652a69e35419e13c100b6a083f8edac637654a106c0fbb6eed1644c
-MISC ChangeLog 485 RMD160 08352b208333dd2da79c6f97a79e2de8ef05d833 SHA1 63676f6e9e86f3620b333230593a459f366a8eaf SHA256 0049e930a32abba3b9f418680bd0ded6eed6f1974fde5b237cf9149d8c99c210
+EBUILD wordish-1.0.1.ebuild 385 RMD160 c24af225d07609af62d537e70998fcfd3966b37a SHA1 353543baab0eb48d48b89ae7526427192f3561af SHA256 24f6f9606a437871c6d96253d982ab2722273444b1bce9323cc274f52fff2bba
+MISC ChangeLog 606 RMD160 6fb1643a73d606575fb750da726df31a6a797b62 SHA1 986e80ebb20b5ca878b9ba71afc52a0abe1e9ec9 SHA256 74b94e91be817e65f4802b0245e04766d09c84a2e681e63eb8c6ef27ce53178f
 MISC metadata.xml 981 RMD160 05ce40063367c6d32123b3eccfcc56af17516f98 SHA1 9984be5d02b178d9010ea3232001b43cb7754b65 SHA256 294d778c85ff25addf6e793c667f5356a9a3787831910dce674b4ae3fd83f5d8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkt6VhsACgkQzJrj3cAXR0kCQQCgseOg6+tF1RPuompgldSJwq4L
-FDIAnj3wJMqS/PynLKUHUFxTXPNgZMnz
-=3bRu
+iEYEARECAAYFAkuB+9gACgkQzJrj3cAXR0m6XwCePWUI5seDUv9nzWy4UplAUfMc
+pv8AoL/r7SmDbALp5dDZenXFDKNfavg7
+=Y+yy
 -----END PGP SIGNATURE-----
