@@ -1,0 +1,20 @@
+# Copyright 1999-2010 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+
+EAPI="2"
+SUPPORT_PYTHON_ABIS="1"
+
+inherit jnrowe-pypi
+
+DESCRIPTION="Parses a shell session, test the commands compare the output"
+
+LICENSE="GPL-3"
+SLOT="0"
+KEYWORDS="~amd64 ~x86"
+IUSE=""
+
+DEPEND=""
+RDEPEND="dev-python/docutils"
+
+RESTRICT_PYTHON_ABIS="2.4 2.5 3.*"
