@@ -34,5 +34,7 @@ REM 2010-03-20 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 media-sound/mpdcron-0.
 REM 2010-03-20 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 media-sound/mpdcron-0.3 %a
 REM 2010-03-20 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-python/pep8-0.5.0 %a
 REM 2010-03-20 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/pep8-0.5.0 %a
+REM 2010-03-24 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-python/wordish-1.0.1 %a
+REM 2010-03-24 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/wordish-1.0.1 %a
 
 # vim: set sw=4 sts=4 et tw=80 fenc=utf-8 ft=remind:
