@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*wordish-1.0.1 (22 Feb 2010)
+
+  22 Feb 2010; James Rowe <jnrowe@gmail.com> +wordish-1.0.1.ebuild:
+  Version bump [124].
+
 *wordish-1.0.0_beta4 (16 Feb 2010)
 
   16 Feb 2010; James Rowe <jnrowe@gmail.com> +wordish-1.0.0_beta4.ebuild,
